# lwfs

./: AUTHORS  ChangeLog  INSTALL  Linux-PAM-0.99.3.0_wanghy1012_1.tgz  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  config.h  config.h.in  config.status  configure  configure.ac  debugfiles.list  debuglinks.list  debugsources.list  libtool  lwfs.spec  lwfs.spec.in  mk
ABAC-ACCESS/: cpToEntry.py  (+2 more)
booster/src/: Makefile  Makefile.am  Makefile.in  booster-fd.c  booster-fd.h  booster.c  booster_fstab.c  booster_fstab.h  booster_stat.c  liblwfs-booster.la  liblwfs_booster_la-booster-fd.lo  liblwfs_booster_la-booster.lo  liblwfs_booster_la-booster_fstab.lo  liblwfs_booster_la-booster_stat.lo
booster/src/.deps/: liblwfs_booster_la-booster-fd.Plo  liblwfs_booster_la-booster.Plo  liblwfs_booster_la-booster_fstab.Plo  liblwfs_booster_la-booster_stat.Plo
booster/src/.libs/: liblwfs-booster.la  liblwfs-booster.lai  liblwfs-booster.so.0.0.0  liblwfs-booster.so.0.0.0T
contrib/fuse-util/: Makefile  Makefile.am  Makefile.in
doc/: Makefile  Makefile.am  Makefile.in  get_put_api_using_xattr.txt  lwfs.8  lwfs.vol.sample  lwfsd.vol.sample  mac-related-xattrs.txt  mount.lwfs.8  porting_guide.txt
doc/examples/: Makefile  Makefile.in  README  io-threads.vol  protocol-server.vol  replicate.vol  stripe.vol  trace.vol  unify.vol
doc/hacker-guide/: Makefile  Makefile.in  bdb.txt  call-stub.txt  posix.txt  replicate.txt  write-behind.txt
extras/: Makefile  Makefile.am  Makefile.in  backend-cleanup.sh  backend-xattr-sanitize.sh  lwfs-mode.el  lwfs.vim  migrate-unify-to-distribute.sh  scale-n-defrag.sh  specgen.scm
extras/MacOSX/: Portfile
extras/benchmarking/: Makefile  Makefile.in  README  glfs-bm.c  launch-script.sh  local-script.sh  rdd.c
extras/init.d/: Makefile  Makefile.am  Makefile.in  lwfs-server.plist  lwfs-server.plist.in  lwfsd-Debian  lwfsd-Debian.in  lwfsd-Redhat  lwfsd-Redhat.in  lwfsd-SuSE  lwfsd-SuSE.in
extras/volgen/: CreateBooster.py  Makefile  Makefile.am  Makefile.in  lwfs-volgen  lwfs-volgen.in
liblwfsclient/src/: Makefile  Makefile.am  Makefile.in  liblwfsclient-dentry.c  liblwfsclient-internals.h  liblwfsclient.c  liblwfsclient.h  liblwfsclient.la  liblwfsclient_la-liblwfsclient-dentry.lo  liblwfsclient_la-liblwfsclient.lo
liblwfsclient/src/.deps/: liblwfsclient_la-liblwfsclient-dentry.Plo  liblwfsclient_la-liblwfsclient.Plo
liblwfsclient/src/.libs/: liblwfsclient.la  liblwfsclient.lai  liblwfsclient.so.0.0.0  liblwfsclient.so.0.0.0T
lwfsd/src/: Makefile  Makefile.am  Makefile.in  fetch-spec.c  lwfsd  lwfsd.c  lwfsd.h
lwfsd/src/.deps/: fetch-spec.Po  lwfsd.Po
lwfsd/src/.libs/: lwfsd
scheduler/alu/src/: Makefile  Makefile.am  Makefile.in  alu.c  alu.h  alu.la  alu.lo
scheduler/alu/src/.deps/: alu.Plo
scheduler/alu/src/.libs/: alu.la  alu.lai  alu.so.0  alu.so.0.0.0  alu.so.0.0.0T
scheduler/random/src/: Makefile  Makefile.am  Makefile.in  random.c  random.h  random.la
scheduler/random/src/.deps/: random.Plo
scheduler/random/src/.libs/: random.la  random.lai  random.so.0  random.so.0.0.0  random.so.0.0.0T
scheduler/rr/src/: Makefile  Makefile.am  Makefile.in  rr-options.c  rr-options.h  rr-options.lo  rr.c  rr.h  rr.la  rr.lo
scheduler/rr/src/.deps/: rr-options.Plo  rr.Plo
scheduler/rr/src/.libs/: rr.la  rr.lai  rr.so.0.0.0  rr.so.0.0.0T
xlators/ac/access-control/src/: Makefile  Makefile.am  Makefile.in  access-control.c  access-control.h  access-control.la  access-control.lo  getpolicy.c.tmp  tree.c  tree.h
xlators/ac/access-control/src/.deps/: access-control.Plo  tree.Plo
xlators/ac/access-control/src/.libs/: access-control.la  access-control.lai  access-control.so.0  access-control.so.0.0.0  access-control.so.0.0.0T
xlators/ac/my-encryption/src/: Makefile  Makefile.am  Makefile.in  common.c  crypt-common.c  crypt-common.lo  crypt.h  dec.c  dec.lo  enc.c  enc.lo  keygen.c  my-encryption.c  my-encryption.h  my-encryption.la  my-encryption.lo  policy_lang.c  policy_lang.lo  policy_lang.y  setup.c
xlators/ac/my-encryption/src/.deps/: common.Plo  crypt-common.Plo  dec.Plo  enc.Plo  my-encryption.Plo  policy_lang.Plo  test.Plo  thread_pool.Plo
xlators/ac/my-encryption/src/.libs/: my-encryption.la  my-encryption.lai  my-encryption.so.0  my-encryption.so.0.0.0  my-encryption.so.0.0.0T
xlators/cluster/combine/src/: Makefile  Makefile.am  Makefile.in  combine-helper.c  combine-helper.lo  combine.c  combine.h  combine.la  combine.lo  combineconf.py
xlators/cluster/map/src/: Makefile  Makefile.am  Makefile.in  map-helper.c  map-helper.lo  map.c  map.h  map.la
xlators/cluster/stripe/src/: Makefile  Makefile.am  Makefile.in  stripe.c  stripe.h  stripe.la
xlators/debug/supervisor/src/: Makefile  Makefile.am  Makefile.in  msg.h  msg_xdr.c  msg_xdr.lo  proc.c  proc.lo  server.c  supervisor.c  supervisor.la  supervisor.lo
xlators/features/locks/src/: Makefile  Makefile.am  Makefile.in  common.c  common.h  entrylk.c  inodelk.c  locks.h  locks.la  posix.c
xlators/features/quota/src/: Makefile  Makefile.am  Makefile.in  quota.c  quota.la
xlators/features/trash/src/: Makefile  Makefile.am  Makefile.in  trash.c  trash.h  trash.la
xlators/performance/io-threads/src/: Makefile  Makefile.am  Makefile.in  io-threads.c  io-threads.h  io-threads.la
xlators/performance/quick-read/src/: Makefile  Makefile.am  Makefile.in  quick-read.c  quick-read.h  quick-read.la
xlators/performance/read-ahead/src/: Makefile  Makefile.am  Makefile.in  page.c  read-ahead.c  read-ahead.h  read-ahead.la
xlators/performance/sw-threads/src/: Makefile  Makefile.am  Makefile.in  sw-threads.c  sw-threads.c.old  sw-threads.h  sw-threads.la  sw-threads.lo
xlators/storage/lposix/src/: Makefile  Makefile.am  Makefile.in  lposix-helper.c  lposix-helper.lo  lposix.c  lposix.h  lposix.la  lposix.lo
xlators/storage/posix/src/: Makefile  Makefile.am  Makefile.in  lustre_quota.h  posix-helper.c  posix-helper.lo  posix.c  posix.h  posix.la
xlators/system/behe-acl/src/: Makefile  Makefile.am  Makefile.in  behe-acl.c  behe-acl.h  behe-acl.la  behe-acl.lo
(+752 files in other folders)
