EXTRA_DIST = lwfs.vol.sample lwfsd.vol.sample lwfs.8 mount.lwfs.8\
	porting_guide.txt authentication.txt coding-standard.pdf get_put_api_using_xattr.txt \
	translator-options.txt mac-related-xattrs.txt replicate.pdf

SUBDIRS = examples hacker-guide

voldir = $(sysconfdir)/lwfs
vol_DATA = lwfs.vol.sample lwfsd.vol.sample

man8_MANS = lwfs.8 mount.lwfs.8

CLEANFILES = 
