
docdir = $(datadir)/doc/lwfs/
EditorModedir = $(docdir)/
EditorMode_DATA = lwfs-mode.el lwfs.vim

SUBDIRS = init.d benchmarking volgen

EXTRA_DIST = specgen.scm MacOSX/Portfile lwfs-mode.el lwfs.vim migrate-unify-to-distribute.sh backend-xattr-sanitize.sh backend-cleanup.sh defrag.sh scale-n-defrag.sh

